# nitram

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bun.lockb  justfile  package.json
bindings/: ConciergeRequest.ts  ConciergeResponse.ts  ConciergeSignal.ts
examples/: main.rs
examples/main/: main.rs
examples/main/bindings/: MessagesOutput.ts  Nitram.ts  NitramRequest.ts  NitramServerMessage.ts  NitramSignal.ts  User.ts
examples/main/bindings/API/: Params.ts  index.ts
examples/main/web-app/: .env  index.html  package.json  tsconfig.app.json
examples/main/web-app/src/: App.tsx  BackendContext.tsx  Chat.tsx  Login.tsx  Private.tsx  User.tsx  index.css  index.tsx  store.ts
examples/main/web-app/src/lib/: nitram.ts
examples/web-app/: tsconfig.app.json
examples/web-app/src/: App.tsx
examples/web-app/src/lib/: nitram.ts
src/: auth.rs  builder.rs  concierge.rs  error.rs  lib.rs  messages.rs  models.rs  nice.rs  nitram.rs  ws.rs
tests/: concierge.rs  nitram.rs
