[package]
name = "concierge"
version = "0.1.0"
edition = "2021"
authors = ["Martin Schaer <martin@schaerweb.com>"]

[dependencies]
# -- Async
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
# -- Typescript
ts-rs = { version = "10.1.0", features = [
    "serde-json-impl",
    "chrono-impl",
    "uuid-impl",
] }
# -- Web
actix-web = "4.8.0"
actix-ws = "0.3.0"
bytestring = "1.3.1"
# -- Logging
tracing = "0.1.40"
tracing-test = "0.2.5"
# -- RPC
rpc-router = "0.1.3"
# -- Other
base64 = "0.22.1"
derive_more = { version = "1.0.0", features = ["from"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
# -- Date Time
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
actix-files = "0.6.6"
