[package]
name = "nitram"
version = "0.4.0"
authors = ["Martin Schaer <martin@schaerweb.com>"]
edition = "2021"
description = "Opinionated RPC server for Rust and Typescript"
repository = "https://github.com/martinschaer/nitram"
license = "MIT OR Apache-2.0"
keywords = ["rpc", "server", "typescript", "actix"]
categories = [
    "web-programming",
    "web-programming::http-server",
    "web-programming::websocket",
]

[dependencies]
# -- Async
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
# -- Date Time
chrono = { version = "0.4.39", features = ["serde"] }
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
# -- Logging
tracing = "0.1.41"
tracing-test = "0.2.5"
# -- RPC
rpc-router = "0.1.3"
# -- Typescript
ts-rs = { version = "10.1.0", features = [
    "serde-json-impl",
    "chrono-impl",
    "uuid-impl",
] }
# -- Other
bytestring = "1.5.0"
derive_more = { version = "2.0.1", features = ["from"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
# -- Web
actix-web = "4.13.0"
actix-ws = "0.4.0"

[dev-dependencies]
# -- For example
# Static SPA files
actix-files = "0.6.10"
# JWT
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
# Logging
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
